# SerenityBoard

./: .gitignore  README.md  pyproject.toml
scripts/: write_loop.py
serenityboard/: __main__.py  lora_analytics.py
serenityboard/compat/: __init__.py  torch.py
serenityboard/frontend/: app.js  charts.js  echarts-theme.js  index.html  live.js  lora.js  projector.js  style.css
serenityboard/ops/: __init__.py  automations.py  db.py  registry.py  schema.py  sweeps.py  tables.py
serenityboard/plugins/: __init__.py  base.py
serenityboard/server/: app.py  data_provider.py  live_updates.py  run_manager.py
serenityboard/server/routes/: __init__.py  artifacts.py  audio.py  automations.py  custom_scalars.py  distributions.py  embeddings.py  eval.py  graphs.py  histograms.py  hparams.py  images.py  lora.py  meshes.py  metrics.py  notes.py  plugins.py  pr_curves.py  registry.py  scalars.py  sweeps.py  tables.py  text.py  traces.py
serenityboard/writer/: __init__.py  async_writer.py  blob_storage.py  reservoir.py  schema.py  session_guard.py  summary_writer.py  system_metrics.py
tests/: conftest.py  test_app.py  test_async_writer.py  test_compat.py  test_data_provider.py  test_disk_error.py  test_integration.py  test_live_updates.py  test_lora_analytics.py  test_reservoir.py  test_routes.py  test_run_manager.py  test_session_guard.py  test_system_metrics.py  test_writer.py  test_writer_methods.py
