[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serenityboard"
version = "0.1.0"
description = "Training dashboard for any PyTorch trainer. Replaces TensorBoard."
readme = {text = "Training dashboard for any PyTorch trainer.", content-type = "text/plain"}
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "numpy>=1.24",
    "Pillow>=9.0",
]

[project.optional-dependencies]
torch = ["torch"]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "websockets>=11.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
serenityboard = "serenityboard.__main__:main"

[project.entry-points."serenityboard.plugins"]
# Third-party plugins register here via their own pyproject.toml

[tool.hatch.build.targets.wheel]
packages = ["serenityboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
